<resources>
    <string name="app_name">i-Travel</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Enter user name: (email)</string>
    <string name="prompt_password">Enter password:</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register_activity_login">Register</string>
    <string name="logout_user_panel">Logout</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">The password must contain an least 8 characters</string>
    <string name="error_username_exist">Choose another user name</string>
    <string name="error_invalid_confirm_password">The passwords not match</string>
    <string name="error_incorrect_password">The username or password are incorrect</string>
    <string name="login_proccess_error">Cannot perform login proccess try again later.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_age_must_more_9">Your age is not allowed!</string>
    <string name="minimum_age_toast_message">Note: You must be at least 9 year old!</string>
    <string name="error_phone_format">Enter valid phone number-10 digits for the local format and maximum 12 digits for the universal format e.g. +97250-000-0000.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="bussiness_agency_app">Bussiness agency app</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="user_email_name_placeholder">foo@example.com</string>
    <string name="password_placeholder">Password</string>
    <string name="re_password_placeholder">Confirm password</string>
    <string name="login_checkbox">Remmber me</string>
    <string name="user_login_data">Login details:</string>
    <string name="user_personal_data">Personal details:</string>

    <string name="user_name">Enter user name (e-mail):</string>
    <string name="user_password">Enter new password:</string>
    <string name="user_password_confirm">Enter same password again:</string>

    <string name="first_name">First name:</string>
    <string name="first_name_example">e.g. John</string>
    <string name="last_name">Last name:</string>
    <string name="last_name_example">e.g. Brand</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birth_day">Birthday:</string>
    <string name="birth_day_example">e.g. 15/01/1990</string>
    <string name="phone">Phone number:</string>
    <string name="phone_example">e.g. +972500020123</string>
    <string name="address">Address:</string>
    <string name="address_example">e.g. John 415, TLV</string>
    <string name="have_account_login">Already have an account?</string>
    <string name="have_not_account_register">Do not have an account?</string>

    <string name="login_proccess_title">Trying to login</string>
    <string name="registering_proccess_title">Trying to register</string>
    <string name="proccess_running_wait">Pease Wait...</string>

    <string name="choose_date">Select date</string>
    <string name="saved_user_cleared">Cleared</string>
    <string name="flow_direction">ltr</string>

    <!-- User panel Menu strings -->
    <string name="user_name_profile">Username</string>
    <string name="user_home_lists">My items</string>
    <string name="user_businesses_lists">My Businesses</string>
    <string name="update_user_profile">Update</string>
    <string name="user_profile_settings">Settings</string>
    <string name="logout_user_profile">Logout</string>
    <string name="sharing_and_communication">Communication</string>
    <string name="share">Share</string>
    <string name="send">Send</string>

    <!-- Add activity/business menu -->
    <string name="add_bussiness_contex">Add business</string>
    <string name="add_activity_contex">Add activity</string>

    <string-array name="user_panel_menu_items">
        <item>Upadte</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>

    <array name="user_panel_menu_icons">
        <item>@drawable/update_user_icon</item>
        <item>@drawable/settings_icon</item>
        <item>@drawable/logout_icon</item>
    </array>

    <!-- User panel Strings -->
    <string name="user_panel_title">User panel</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Add activity strings -->
    <string name="add_activity_title">Add activity</string>
    <string name="add_activity_instructions">Please fill the fields below and finally click on the "Add" button.</string>
    <string name="activity_id">Activity ID:</string>
    <string name="activity_business_id">Business ID:</string>
    <string name="activity_name">Activity name</string>
    <string name="activity_description">Description</string>
    <string name="activity_start_date">Start at:</string>
    <string name="activity_end_date">End at:</string>
    <string name="activity_category">Category:</string>
    <string name="activity_location">location</string>
    <string name="activity_price">Price:</string>

    <string name="add_activity_process_title">Adding the activity</string>

    <string-array name="category_items_array">
        <item>Short track</item>
        <item>Day trip</item>
        <item>Families trip</item>
        <item>Guided tour</item>
        <item>Hotel</item>
        <item>Weekend</item>
    </string-array>

    <!-- Add activity Errors -->
    <string name="business_id_error">Please choose business ID</string>
    <string name="activity_name_error">Please choose another name</string>
    <string name="start_date_error">The start date must be after current time!</string>
    <string name="end_date_error">The end date must be after the start date!</string>
    <!-- Buttons texts -->
    <string name="add_button">Add</string>
    <string name="cancel_button">Cancel</string>

    <string name="loading_info_title">Loading info</string>

    <string name="activities_list_label">Your activities</string>
    <string name="businesses_list_label">Your businesses</string>

    <string name="business_id_label">Business ID:</string>
    <string name="id_label">ID:</string>
    <string name="add_business_title">Add business</string>
    <string name="business_name">Business name</string>


    <string name="add_business_instructions">Please fill the fields below according the examples.</string>
    <string name="incorrect_website_error">Please enter valid website address such as: http://www.example.com.</string>
    <string name="add_activity_must_be_business">Please add business before you adding activity!</string>

    <string name="add_business_process_title">Adding the business</string>
    <string name="add_business_process_success">The business added!</string>
    <string name="add_business_failed_error">Failed to add the business try again</string>
    <string name="add_business_exist_error">The business name is exist! please choose another name.</string>
    <string name="add_business_unknown_error">Unknown error - try again.</string>

    <string name="dialog_are_you_sure_cancel_title">Are you sure?</string>
    <string name="dialog_are_you_sure_cancel_message">All no saved data will lost</string>
    <string name="dialog_are_you_sure_cancel_stay">Stay</string>
    <string name="dialog_are_you_sure_cancel_ok">Leave</string>
    <string name="ok_button">Ok</string>

</resources>
