<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/UserLists"
            android:icon="@drawable/ic_action_list"
            android:title="@string/user_home_lists" />

        <item
            android:id="@+id/UpdateUserDetails"
            android:icon="@drawable/update_user_icon"
            android:title="@string/update_user_profile" />
        <item
            android:id="@+id/UserSettings"
            android:icon="@drawable/settings_icon"
            android:title="@string/user_profile_settings" />
        <item
            android:id="@+id/LogoutUser"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout_user_profile" />
    </group>

    <item android:title="@string/sharing_and_communication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
