<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:scrollbars="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="12dp"
    android:paddingBottom="40dp"
    android:scrollbarThumbVertical="@color/yellow"
    android:scrollbarTrackVertical="@color/lightYellow"
    android:overScrollMode="never"
    android:layoutDirection="inherit">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/BusinessImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bussiness"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/business_name"
            android:ems="10"
            style="@style/AlertDialog.AppCompat.Light.WhiteTextInput"
            android:layout_below="@id/BusinessImage"
            android:layout_centerHorizontal="true"
            android:id="@+id/AddBusinessName" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_centerHorizontal="true"
            android:hint="@string/activity_description"
            android:ems="10"
            style="@style/AlertDialog.AppCompat.Light.WhiteTextInput"
            android:id="@+id/AddBusinessDescription"
            android:layout_below="@id/AddBusinessName"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_centerHorizontal="true"
            android:hint="@string/user_email_name_placeholder"
            android:ems="10"
            style="@style/AlertDialog.AppCompat.Light.WhiteTextInput"
            android:id="@+id/AddBusinessEmail"
            android:layout_below="@id/AddBusinessDescription"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:inputType="phone"
            android:hint="@string/phone_example"
            android:ems="10"
            style="@style/AlertDialog.AppCompat.Light.WhiteTextInput"
            android:id="@+id/AddBusinessPhone"
            android:layout_below="@id/AddBusinessEmail"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_centerHorizontal="true"
            android:hint="@string/address_example"
            android:ems="10"
            style="@style/AlertDialog.AppCompat.Light.WhiteTextInput"
            android:id="@+id/AddBusinessAddress"
            android:layout_below="@id/AddBusinessPhone"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_centerHorizontal="true"
            android:hint="http://www.website.com"
            android:ems="10"
            style="@style/AlertDialog.AppCompat.Light.WhiteTextInput"
            android:id="@+id/AddBusinessWebsite"
            android:layout_below="@id/AddBusinessAddress"/>
    </RelativeLayout>
</ScrollView>